2015-10-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check_reparse_point): Don't generate an EIO
	error if NtFsControlFile returns STATUS_NOT_A_REPARSE_POINT.

2015-09-23  Evgeny Grin  <k2k@yandex.ru>

	* fhandler_socket.cc (fhandler_socket::wait_for_events): Fix compiler
	warning in -O3 case.
	(fhandler_socket::connect): Ditto.
	* regex/regcomp.c (singleton): Ditto.

2015-09-08  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (lockf_t::create_lock_obj_attr): Add buffer parameter.
	Call _everyone_sd with buffer argument from caller rather than
	everyone_sd with locally allocated stack buffer.
	(lockf_t::create_lock_obj): Call create_lock_obj_attr only once
	outside the loop and with additional buffer argument.
	(lockf_t::open_lock_obj): Call create_lock_obj_attr with additional
	buffer argument.

2015-08-29  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_cpuinfo): Fetch cache information
	from new cache functions in sysconf.cc, get_cpu_cache_intel and
	get_cpu_cache_amd.
	* sysconf.cc (__nt_query_system): New local helper.
	(get_nproc_values): Utilize __nt_query_system on pre-Windows 7 systems.
	Use GetLogicalProcessorInformationEx otherwise to handle more than
	64 CPUs.  Only handle _SC_NPROCESSORS_CONF and _SC_NPROCESSORS_ONLN.
	(get_phys_pages): New helper to handle _SC_PHYS_PAGES.
	(cpuid2_cache_descriptor): New array to map Intel CPUID 2 descriptor
	values to cache type, cache size, associativity and linesize.
	(cpuid2_cache_desc_compar): Comparision function for bsearch over
	cpuid2_cache_descriptor.
	(get_cpu_cache_intel_cpuid2): New function to fetch cache info from
	Intel CPUID 2.
	(get_cpu_cache_intel_cpuid4): Ditto from Intel CPUID 4.
	(get_cpu_cache_intel): New function as CPU-specific entry point.
	(assoc): New array to map associativity values from AMD CPUID
	0x80000006.
	(get_cpu_cache_amd): New function to fetch cache info from AMD CPUIDs
	0x80000005 and 0x80000006.